--- a/exercise.html
+++ b/exercise.html
@@ -18,6 +18,7 @@
     />
   </head>
   <body>
+    test
     <div class="status-bar">
       <div id="statusBarIndicator" class="status-bar__indicator"></div>
     </div>
