--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Poppins:ital@0;1&display=swap"
       rel="stylesheet"
     />
   </head>
