--- a/index.html
+++ b/index.html
@@ -27,17 +27,7 @@
         Do you want to become a real math master? Then select one of the
         following exercises and show your potential!
       </p>
-      <ol id="exercisesList" class="exercises-list">
-        <!-- <li class="exercise-container">
-          <a class="exercise__link" href="/exercise.html?id=0">
-            <span class="exercise__index">1</span>
-            <span class="exercise__operators">a+b</span>
-            <span class="exercise__difficulty exercise__difficulty-easy"
-              >easy</span
-            >
-          </a>
-        </li> -->
-      </ol>
+      <ol id="exercisesList" class="exercises-list"></ol>
     </div>
 
     <script src="./js/index.js" type="module"></script>
